@@ -1,3 +1,10 @@
+2011-03-13  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* help-fns.el (help-function-arglist):
+	* emacs-lisp/bytecomp.el (byte-compile-arglist-warn):
+	* subr.el (apply-partially): Adjust to new format.
+	* emacs-lisp/disass.el (disassemble-internal): Catch closures.
+
 2011-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* subr.el (apply-partially): Move from subr.el; don't use lexical-let.
